--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -20,7 +20,10 @@
           <li><a href="">Capture Moment</a></li>
           <li><a href="">Log Out</a></li>
         {% else %}
-          <li><a href="">About</a></li><li><a href="">Sign Up</a></li><li><a href="">Log In</a></li>
+          <li><a href="">About</a></li>
+          <li><a href="">Sign Up</a></li> 
+          <!--Check websites and possibly change the order of these two account-based links-->
+          <li><a href="">Log In</a></li>
         {% endif %}
       </ul>
     </nav>
