--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -1,4 +1,4 @@
-<!--Load Static-->
+{% load static %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Reflections</title>
+  <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}">
   {% block head %}
   {% endblock %}
 </head>
