layout design for signup page

--- a/main_app/templates/signup.html
+++ b/main_app/templates/signup.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 {% block head %}
-<!--Stylesheet-->
+<link rel="stylesheet" type="text/css" href="{% static 'css/signup.css' %}">
 {% endblock %}
 
 {% block content %}
