--- a/main_app/static/css/signup.css
+++ b/main_app/static/css/signup.css
@@ -1,4 +1,11 @@
-body {
-  background: url("https://media.istockphoto.com/photos/water-texture-picture-id146894620?b=1&k=20&m=146894620&s=170667a&w=0&h=deKuJEmmYsrDC7Z5bIxgQ1LkWDXSQdmj7q_60m_9OUI=") no-repeat, center;
-  background-size: cover;
+.signup-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.signup-form {
+  height: 60vh;
+  width: 60%;
+  background: linear-gradient(rgba(255,255,255,0.7), rgba(255,255,255,0.3));
 }
