--- a/main_app/templates/signup.html
+++ b/main_app/templates/signup.html
@@ -15,12 +15,14 @@
 {% if error_message %}
   <p class="error-text">{{ error_message }}</p>
 {% endif %}
-<form action="" method="post" class="form-container" autocomplete="off">
-  {% csrf_token %}
-  <table>
-    {{ form.as_table }}
-  </table>
-  <button type="submit" class="btn submit">Submit!</button>
-</form>
+<section class="signup-container">
+  <form action="" method="post" class="signup-form" autocomplete="off">
+    {% csrf_token %}
+    <table>
+      {{ form.as_table }}
+    </table>
+    <button type="submit" class="btn submit">Submit!</button>
+  </form>
+</section>
 
 {% endblock %}
