add dynamic url to index view

--- a/main_app/templates/memories/index.html
+++ b/main_app/templates/memories/index.html
@@ -10,11 +10,13 @@
 <section class="card-container">
   {% for memory in memories %}
     <div class="card"> <!--set the background to the logo-->
-      <div class="card-details">
-        <h2 class="card-title">{{ memory.name }}</h2>
-        <p>When was this?: {{ memory.date }}</p>
-        <p>Where was I?: {{ memory.location }}</p>
-      </div>
+      <a href="{% url 'memories_detials' memory.id %}">
+        <div class="card-details">
+          <h2 class="card-title">{{ memory.name }}</h2>
+          <p>When was this?: {{ memory.date }}</p>
+          <p>Where was I?: {{ memory.location }}</p>
+        </div>
+      </a>
     </div>
   {% endfor %}
 </section>
