Create and link stylesheets for all current views

--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% load static %}
-
+<link rel="stylesheet" type="text/css" href="{% static 'css/about.css' %}">
 {% block content %}
 
 <h1>Reflections</h1>
