--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -3,8 +3,7 @@
 {% load static %}
 
 {% block head %}
-<!--Stylesheet-->
-{% endblock %}
+<link rel="stylesheet" type="text/css" href="{% static 'css/home.css' %}">{% endblock %}
 
 {% block content %}
 
