--- a/main_app/templates/main_app/memory_form.html
+++ b/main_app/templates/main_app/memory_form.html
@@ -2,8 +2,7 @@
 {% load static %}
 
 {% block head %}
-<!--Stylesheet-->
-{% endblock %}
+<link rel="stylesheet" type="text/css" href="{% static 'css/form.css' %}">{% endblock %}
 
 {% block content %}
 
