--- a/main_app/templates/memories/detial.html
+++ b/main_app/templates/memories/detial.html
@@ -2,9 +2,7 @@
 {% load static %}
 
 {% block head %}
-<!--Stylesheet-->
-{% endblock %}
-
+<link rel="stylesheet" type="text/css" href="{% static 'css/memory-detail.css' %}">{% endblock %}
 {% block content %}
 
 <section class="memory-detail">
