--- a/main_app/templates/memories/index.html
+++ b/main_app/templates/memories/index.html
@@ -2,8 +2,7 @@
 {% load static %}
 
 {% block head %}
-<!--Stylesheey-->
-{% endblock %}
+<link rel="stylesheet" type="text/css" href="{% static 'css/memory-index.css' %}">{% endblock %}
 
 {% block content %}
 
