update functioanlity working

--- a/main_app/templates/memories/index.html
+++ b/main_app/templates/memories/index.html
@@ -9,7 +9,7 @@
 <section class="card-container">
   {% for memory in memories %}
     <div class="card"> <!--set the background to the logo-->
-      <a href="{% url 'memories_detials' memory.id %}">
+      <a href="{% url 'memories_detail' memory.id %}">
         <div class="card-details">
           <h2 class="card-title">{{ memory.name }}</h2>
           <p>When was this?: {{ memory.date }}</p>
