--- a/main_app/templates/memories/detail.html
+++ b/main_app/templates/memories/detail.html
@@ -10,6 +10,7 @@
     <h1>{{ memory.name }}</h1>
     <h2>{{ memory.date }}</h2>
     <h2>{{ memory.location }}</h2>
+    <h2>{{ memory.details }}</h2>
   </div>
   <a href="{% url 'memories_update' memory.id %}" class="btn warn">Edit</a>
 </section>
