--- a/main_app/static/css/base.css
+++ b/main_app/static/css/base.css
@@ -14,3 +14,16 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
 }
+
+nav {
+  font-family: 'Cinzel Decorative';
+  font-size: 22px;
+  font-weight: 1500;
+}
+
+nav ul {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
