--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -25,9 +25,9 @@
           <li><a href="">Log Out</a></li>
         {% else %}
           <li><a href="{% url 'about' %}">About</a></li>
-          <li><a href="{% url 'signup' %}">Sign Up</a></li> 
-          <!--Check websites and possibly change the order of these two account-based links-->
+          <h1>Reflections</h1>
           <li><a href="">Log In</a></li>
+          <li><a href="{% url 'signup' %}">Sign Up</a></li> 
         {% endif %}
       </ul>
     </nav>
