Fix non responsive logout link - MVP

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -22,7 +22,7 @@
           <li><a href="{% url 'memories_index' %}">All Reflections</a></li>
           <h1>Reflections</h1>
           <li><a href="{% url 'memories_create' %}">Capture Moment</a></li>
-          <li><a href="{% url 'home' %}">Log Out</a></li>
+          <li><a href="{% url 'logout' %}">Log Out</a></li>
         {% else %}
           <li><a href="{% url 'about' %}">About</a></li>
           <h1>Reflections</h1>
