--- a/main_app/templates/memories/detail.html
+++ b/main_app/templates/memories/detail.html
@@ -6,7 +6,7 @@
 {% block content %}
 
 <section class="memory-detail">
-  <div class="memory-crad">
+  <div class="memory-card">
     <h1>{{ memory.name }}</h1>
     <h2>{{ memory.date }}</h2>
     <h2>{{ memory.location }}</h2>
