--- a/main_app/static/css/base.css
+++ b/main_app/static/css/base.css
@@ -9,7 +9,7 @@ html {
 }
 
 body {
-  height: 100vh;
+  min-height: 100vh;
   background: linear-gradient(to right top, #65efc9, #6cdbeb);
   background-repeat: no-repeat;
   background-size: cover;
