--- a/main_app/templates/memories/detail.html
+++ b/main_app/templates/memories/detail.html
@@ -2,7 +2,9 @@
 {% load static %}
 
 {% block head %}
-<link rel="stylesheet" type="text/css" href="{% static 'css/memory-detail.css' %}">{% endblock %}
+<link rel="stylesheet" type="text/css" href="{% static 'css/memory-detail.css' %}">
+{% endblock %}
+
 {% block content %}
 
 <section class="memory-detail">
