--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -4,7 +4,12 @@
 <link rel="stylesheet" type="text/css" href="{% static 'css/about.css' %}">
 {% block content %}
 
-<hr>
-<p>A place to reflect on lifes' moments</p>
-
+<main class="about-section">
+  <section class="intro">
+    <div class="description">
+      <h2>Why Reflections</h2>
+      <p>Life is full of moments worth remembering. Often those moments only exist as a thought when they are suddenly remembered. The purpose of reflections is to provide a place to store those moments when they happen, a place to reflect on those moments, and a place to share them with others.</p>
+    </div>
+  </section>
+</main>
 {% endblock %}
