--- a/main_app/static/css/base.css
+++ b/main_app/static/css/base.css
@@ -15,15 +15,29 @@ body {
   background-size: cover;
 }
 
+h1 {
+  color: beige;
+}
+
+header {
+background-color: black;
+}
+
 nav {
   font-family: 'Cinzel Decorative';
   font-size: 22px;
   font-weight: 1500;
+  margin: -25px;
+}
+
+nav a {
+  color: beige;
+  text-decoration: none;
 }
 
 nav ul {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-evenly;
   flex-wrap: wrap;
 }
