--- a/main_app/static/css/about.css
+++ b/main_app/static/css/about.css
@@ -8,7 +8,7 @@ main {
 
 .intro {
   min-height: 80vh;
-  width: 60%;
+  width: 400px;
   background: linear-gradient(rgba(255,255,255,0.7), rgba(255,255,255,0.3));
 }
 
