--- a/main_app/static/css/memory-index.css
+++ b/main_app/static/css/memory-index.css
@@ -1,13 +1,20 @@
-
+.card-container {
+  display: flex;
+  align-items: center;
+  justify-content: column;
+}
 
 .card {
   width: 400px;
   height: 300px;
-  border: 5px solid white;  display: flex;
+  border: 5px solid white; 
+  margin: 5px; 
+  display: flex;
   align-items: center;
   justify-content: center;
   background-image: url('https://i.imgur.com/XqRehBY.jpg');
   background-size: cover;
+  flex-wrap: wrap;
 }
 
 .card a {
