--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -1,13 +1,21 @@
 {% extends 'base.html' %}
-
 {% load static %}
+
+{% block head %}
 <link rel="stylesheet" type="text/css" href="{% static 'css/about.css' %}">
+{% endblock %}
+
 {% block content %}
 
-<section class="intro">
-  <div class="description">
-    <h2>Why Reflections</h2>
-    <p>Life is full of moments worth remembering. Often those moments only exist as a thought when they are suddenly remembered. The purpose of reflections is to provide a place to store those moments when they happen, a place to reflect on those moments, and a place to share them with others.</p>
-  </div>
-</section>
+<div id="main" class="intro">
+  <section class="still">
+    <div class="description">
+      <h2>Why Reflections</h2>
+      <p>Life is full of moments worth remembering. Often those moments only exist as a thought when they are suddenly remembered. The purpose of reflections is to provide a place to store those moments when they happen, a place to reflect on those moments, and a place to share them with others.</p>
+      <img class="logo-header" src="https://i.imgur.com/XqRehBY.jpg" alt="" style="width: 250px;">
+    </div>
+  </section>
+  <div class="glass"></div>
+</div>
+
 {% endblock %}
