Add logo to nav bar

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -20,12 +20,16 @@
         {% if user.is_authenticated %}
           <li><a href="{% url 'about' %}">About</a></li>
           <li><a href="{% url 'memories_index' %}">All Reflections</a></li>
-          <h1 class="title">Reflections</h1>
+          <li><img src="https://i.imgur.com/XqRehBY.jpg" alt="" style="width: 75px;"></li>
+          <li><h1 class="title">Reflections</h1></li>
+          <li><img src="https://i.imgur.com/XqRehBY.jpg" alt="" style="width: 75px;"></li>
           <li><a href="{% url 'memories_create' %}">Capture Moment</a></li>
           <li><a href="{% url 'logout' %}">Log Out</a></li>
         {% else %}
           <li><a href="{% url 'about' %}">About</a></li>
-          <h1 class="title">Reflections</h1>
+          <li><img src="https://i.imgur.com/XqRehBY.jpg" alt="" style="width: 75px;"></li>
+          <li><h1 class="title">Reflections</h1></li>
+          <li><img src="https://i.imgur.com/XqRehBY.jpg" alt="" style="width: 75px;"></li>
           <li><a href="{% url 'home' %}">Log In</a></li>
           <li><a href="{% url 'signup' %}">Sign Up</a></li> 
         {% endif %}
