--- a/main_app/static/css/base.css
+++ b/main_app/static/css/base.css
@@ -25,7 +25,6 @@ nav {
   font-family: 'Cinzel Decorative';
   font-size: 22px;
   font-weight: 1500;
-  margin: -25px;
 }
 
 nav a {
@@ -36,6 +35,10 @@ nav a {
 nav ul {
   display: flex;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: center;
   flex-wrap: wrap;
+}
+
+nav li {
+  padding: 6px 13px;
 }
