--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -6,6 +6,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="https://i.imgur.com/XqRehBY.jpg" type="image/x-icon">
   <title>Reflections</title>
   <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Srisakdi&display=swap" rel="stylesheet" type="text/css">
