--- a/main_app/templates/main_app/memory_form.html
+++ b/main_app/templates/main_app/memory_form.html
@@ -3,7 +3,7 @@
 
 {% block head %}
 <link href="https://cdn.jsdelivr.net/npm/mc-datepicker/dist/mc-calendar.min.css" rel="stylesheet"/>
-<link rel="stylesheet" href="{% static 'css/mcdp.css' %}">
+<link rel="stylesheet" href="{% static 'css/datepick.css' %}">
 <script src="https://cdn.jsdelivr.net/npm/mc-datepicker/dist/mc-calendar.min.js"></script>
 <link rel="stylesheet" type="text/css" href="{% static 'css/form.css' %}">
 <script defer src="{% static 'js/mem-detail.js' %}"></script>
