--- a/main_app/static/css/about.css
+++ b/main_app/static/css/about.css
@@ -10,6 +10,7 @@
 .still {
   height: 60vh;
   width: 30%;
+  bottom: 10%;
   background: url("https://media.istockphoto.com/photos/water-texture-picture-id146894620?b=1&k=20&m=146894620&s=170667a&w=0&h=deKuJEmmYsrDC7Z5bIxgQ1LkWDXSQdmj7q_60m_9OUI=") no-repeat, center;
   background-size: cover;
   position: absolute;
@@ -22,20 +23,30 @@
 .glass {
   height: 60vh;
   width: 30%;
-  background: linear-gradient(rgba(255,255,255,0.7), rgba(255,255,255,0.3));
+  bottom: 10%;
+  background: linear-gradient(to top, rgba(255,255,255,0.9), rgba(255,255,255,0.5));
   z-index: 2;
   position: absolute;
 }
 
 .description {
   height: 60vh;
-  width: 100%;
+  width: 95%;
   line-height: 2rem;
   z-index: 3;
 }
 
 .description h2 {
-  font-family: "Cinzel Decorative";
+  font-family: "Kaushan Script";
+  text-align: center;
+  font-size: 3rem;
+}
+
+.description p {
+  font-family: "Metal";
+  font-size: 1.5rem;
+  line-height: 2.5rem;
+  font-weight: bold;
 }
 
 .logo-header {
