--- a/main_app/static/css/about.css
+++ b/main_app/static/css/about.css
@@ -1,5 +1,5 @@
 #primary {
-  height: 100vh;
+  min-height: 100vh;
   background: url("https://media.istockphoto.com/photos/water-texture-picture-id146894620?b=1&k=20&m=146894620&s=170667a&w=0&h=deKuJEmmYsrDC7Z5bIxgQ1LkWDXSQdmj7q_60m_9OUI=") no-repeat, center;
   background-size: cover;
   display: flex;
@@ -7,10 +7,10 @@
   justify-content: center;
 }
 
-.still {
-  height: 60vh;
+.intro section {
+  min-height: 75%;
   width: 30%;
-  bottom: 10%;
+  bottom: 5%;
   background: url("https://media.istockphoto.com/photos/water-texture-picture-id146894620?b=1&k=20&m=146894620&s=170667a&w=0&h=deKuJEmmYsrDC7Z5bIxgQ1LkWDXSQdmj7q_60m_9OUI=") no-repeat, center;
   background-size: cover;
   position: absolute;
@@ -21,35 +21,40 @@
 }
 
 .glass {
-  height: 60vh;
+  min-height: 75%;
   width: 30%;
-  bottom: 10%;
+  bottom: 5%;
   background: linear-gradient(to top, rgba(255,255,255,0.9), rgba(255,255,255,0.5));
+  background-size: cover;
   z-index: 2;
   position: absolute;
 }
 
 .description {
-  height: 60vh;
+  min-height: 75%;
   width: 95%;
   line-height: 2rem;
   z-index: 3;
 }
 
 .description h2 {
+  margin-top: 7%;
+  height: 10%;
   font-family: "Kaushan Script";
   text-align: center;
   font-size: 3rem;
 }
 
 .description p {
+  height: 40%;
   font-family: "Metal";
   font-size: 1.5rem;
   line-height: 2.5rem;
   font-weight: bold;
 }
 
-.logo-header {
+.still img {
   z-index: 3;
+  margin-bottom: 2%;
 }
 
