--- a/main_app/static/css/about.css
+++ b/main_app/static/css/about.css
@@ -1,7 +1,12 @@
-#primary {
-  min-height: 100vh;
-  background: url("https://media.istockphoto.com/photos/water-texture-picture-id146894620?b=1&k=20&m=146894620&s=170667a&w=0&h=deKuJEmmYsrDC7Z5bIxgQ1LkWDXSQdmj7q_60m_9OUI=") no-repeat, center;
+.primary {
+  width: 100%;
+  height: 100vh;
+  background: url('https://media.istockphoto.com/photos/water-texture-picture-id146894620?b=1&k=20&m=146894620&s=170667a&w=0&h=deKuJEmmYsrDC7Z5bIxgQ1LkWDXSQdmj7q_60m_9OUI=') no-repeat center;
   background-size: cover;
+}
+
+.intro {
+  min-height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
