--- a/main_app/static/css/about.css
+++ b/main_app/static/css/about.css
@@ -15,7 +15,7 @@
 .intro section {
   min-height: 75%;
   width: 30%;
-  bottom: 5%;
+  bottom: 20%;
   background: url("https://media.istockphoto.com/photos/water-texture-picture-id146894620?b=1&k=20&m=146894620&s=170667a&w=0&h=deKuJEmmYsrDC7Z5bIxgQ1LkWDXSQdmj7q_60m_9OUI=") no-repeat, center;
   background-size: cover;
   position: absolute;
@@ -28,7 +28,7 @@
 .glass {
   min-height: 75%;
   width: 30%;
-  bottom: 5%;
+  bottom: 20%;
   background: linear-gradient(to top, rgba(255,255,255,0.9), rgba(255,255,255,0.5));
   background-size: cover;
   z-index: 2;
@@ -56,6 +56,7 @@
   font-size: 1.5rem;
   line-height: 2.5rem;
   font-weight: bold;
+  margin-bottom: 20%;
 }
 
 .still img {
