move water background and ripples to base css

--- a/main_app/static/css/base.css
+++ b/main_app/static/css/base.css
@@ -9,8 +9,15 @@ html {
 }
 
 body {
-  min-height: 100vh;
-  background-color: black;
+  margin: 0;
+  padding: 0;
+}
+
+.water {
+  width: 100%;
+  height: 100vh;
+  background: url('https://media.istockphoto.com/photos/water-texture-picture-id146894620?b=1&k=20&m=146894620&s=170667a&w=0&h=deKuJEmmYsrDC7Z5bIxgQ1LkWDXSQdmj7q_60m_9OUI=') no-repeat center;
+  background-size: cover;
 }
 
 h1 {
