--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -15,10 +15,13 @@
   <link href="https://fonts.googleapis.com/css2?family=Lancelot&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Metal&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.ripples/0.5.3/jquery.ripples.min.js"></script>
+  <script  defer src="{% static 'js/app.js' %}"></script>
   {% block head %}
   {% endblock %}
 </head>
-<body>
+<body class="water">
   <header>
     <nav>
       <ul>
