--- a/main_app/static/css/blah.css
+++ b/main_app/static/css/blah.css
@@ -1,49 +1,68 @@
-#main {
+/* 
+
+THIS IS THE ABOUT PAGE
+
+.primary {
+  width: 100%;
+  height: 100vh;
+}
+
+.intro {
   min-height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-.still {
-  min-height: 75vh;
-  width: 45%;
+.intro section {
+  min-height: 75%;
+  width: 30%;
+  bottom: 20%;
   background: url("https://media.istockphoto.com/photos/water-texture-picture-id146894620?b=1&k=20&m=146894620&s=170667a&w=0&h=deKuJEmmYsrDC7Z5bIxgQ1LkWDXSQdmj7q_60m_9OUI=") no-repeat, center;
   background-size: cover;
   position: absolute;
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .glass {
-  min-height: 75vh;
-  width: 45%;
-  background: linear-gradient(rgba(255,255,255,0.7), rgba(255,255,255,0.3));
+  min-height: 75%;
+  width: 30%;
+  bottom: 20%;
+  background: linear-gradient(to top, rgba(255,255,255,0.9), rgba(255,255,255,0.5));
+  background-size: cover;
   z-index: 2;
-  border-radius: 15px;
   position: absolute;
 }
 
-.intro {
-  min-height: 100vh;
-  width: 100%;
-  background: url("https://media.istockphoto.com/photos/water-texture-picture-id146894620?b=1&k=20&m=146894620&s=170667a&w=0&h=deKuJEmmYsrDC7Z5bIxgQ1LkWDXSQdmj7q_60m_9OUI=") no-repeat, center;
-  background-size: cover;
+.description {
+  min-height: 75%;
+  width: 95%;
+  line-height: 2rem;
+  z-index: 3;
 }
 
 .description h2 {
-  height: 20%;
-  width: 40%;
-  border-radius: 5px;
-  font-size: 20px;
-  background: white;
+  margin-top: 7%;
+  height: 10%;
+  font-family: "Kaushan Script";
   text-align: center;
+  font-size: 3rem;
 }
+
 .description p {
-  height: 60%;
-  width: 40%;
-  border-radius: 5px;
-  font-size: 20px;
-  background: white;
-  text-align: center;
+  height: 40%;
+  font-family: "Metal";
+  font-size: 1.5rem;
+  line-height: 2.5rem;
+  font-weight: bold;
+  margin-bottom: 20%;
 }
+
+.still img {
+  z-index: 3;
+  margin-bottom: 2%;
+} */
+
