--- a/main_app/static/css/about.css
+++ b/main_app/static/css/about.css
@@ -11,7 +11,7 @@
 }
 
 .intro section {
-  min-height: 75%;
+  min-height: 60%;
   width: 30%;
   bottom: 20%;
   background: url("https://media.istockphoto.com/photos/water-texture-picture-id146894620?b=1&k=20&m=146894620&s=170667a&w=0&h=deKuJEmmYsrDC7Z5bIxgQ1LkWDXSQdmj7q_60m_9OUI=") no-repeat, center;
@@ -24,7 +24,7 @@
 }
 
 .glass {
-  min-height: 75%;
+  min-height: 60%;
   width: 30%;
   bottom: 20%;
   background: linear-gradient(to top, rgba(255,255,255,0.9), rgba(255,255,255,0.5));
@@ -34,14 +34,13 @@
 }
 
 .description {
-  min-height: 75%;
+  min-height: 60%;
   width: 95%;
   line-height: 2rem;
   z-index: 3;
 }
 
 .description h2 {
-  margin-top: 7%;
   height: 10%;
   font-family: "Kaushan Script";
   text-align: center;
@@ -54,10 +53,16 @@
   font-size: 1.5rem;
   line-height: 2.5rem;
   font-weight: bold;
-  margin-bottom: 20%;
+  margin-bottom: 70%;
 }
 
 .still img {
   z-index: 3;
   margin-bottom: 2%;
+}
+
+.logo-header {
+  margin-top: 100%;
+  height: 40%;
+  margin-bottom: 10%;
 }
