--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -14,7 +14,7 @@
         <h2>Let's Reflect</h2>
         <p>Life is full of moments worth remembering. Often those moments only exist as a thought when they are suddenly remembered. The purpose of reflections is to provide a place to store those moments when they happen, a place to reflect on those moments, and a place to share them with others.</p>
       </div>
-      <img class="logo-header" src="https://i.imgur.com/XqRehBY.jpg" alt="" style="width: 250px;">
+      <img class="logo-header" src="https://i.imgur.com/XqRehBY.jpg" alt="" style=" position: absolute;">
     </section>
     <div class="glass"></div>
   </div>
