--- a/main_app/static/css/home.css
+++ b/main_app/static/css/home.css
@@ -1,4 +1,42 @@
-/* .water {
-  min-height: 100vh;
-  width:100%;
-} */
+section {
+  min-height: 60%;
+  width: 60%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.login {
+  min-height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: 3;
+  margin-top: 20%;
+}
+
+.back {
+  min-height: 60%;
+  width: 60%;
+  bottom: 20%;
+  background: url("https://i.imgur.com/XqRehBY.jpg") no-repeat, center;
+  background-size: cover;
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  left: 20%;
+}
+
+.glasses {
+  min-height: 100%;
+  width: 100%;
+  background: linear-gradient(to top, rgba(255,255,255,0.9), rgba(255,255,255,0.5));
+  background-size: cover;
+  z-index: 2;
+  position: absolute;
+}
