--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -9,19 +9,20 @@
 {% block content %}
 
 <!--Whatever else will go on this page-->
-<div class"back">
 
-  {% if not user.is_authenticated %}
-    <section>
-      <form action="{% url 'home' %}" method="post" class="login">
-        <h1>Login</h1>
-        {% csrf_token %}
-        {{ form.as_p }}
-        <input type="hidden" name="next" value="{{ next }}">
-        <button type="submit" class="btn submit">Login</button>
-      </form>
-    </section>
-  {% endif %}
-
-</div>
+{% if not user.is_authenticated %}
+  <section>
+    <form action="{% url 'home' %}" method="post" class="login">
+      <h1>Login</h1>
+      {% csrf_token %}
+      {{ form.as_p }}
+      <input type="hidden" name="next" value="{{ next }}">
+      <button type="submit" class="btn
+        submit">Login</button>
+    </form>
+  </section>
+{% endif %}
+<section class="back">
+  <div class="glasses"></div>
+</section>
 {% endblock %}
