Rearrange login inputs

--- a/main_app/static/css/home.css
+++ b/main_app/static/css/home.css
@@ -18,6 +18,23 @@ section {
   margin-top: 20%;
 }
 
+.login h1 {
+  color:rgb(15, 2, 41);
+  font-family: "Kaushan Script";
+  font-size: 4rem;
+  margin-top: -5%;
+}
+
+.login  p {
+  display: flex;
+  flex-direction: column;
+  width: 60%;
+  margin-left: 35%;
+  color: rgb(47, 6, 65);
+  font-size: 1.5rem;
+  font-family: "Metal";
+}
+
 .back {
   min-height: 60%;
   width: 60%;
