--- a/main_app/static/css/home.css
+++ b/main_app/static/css/home.css
@@ -38,6 +38,9 @@ section {
 .login input {
   width: 100px;
   transition: width 0.8s ease-in-out;
+  background-color: rgba(255,255,255,0);
+  border: none;
+  box-shadow: 0px 5px 15px -5px white;
 }
 
 .login input:focus {
