--- a/main_app/static/css/home.css
+++ b/main_app/static/css/home.css
@@ -19,10 +19,11 @@ section {
 }
 
 .login h1 {
-  color:rgb(15, 2, 41);
+  color:rgb(4, 14, 70);
   font-family: "Kaushan Script";
   font-size: 4rem;
   margin-top: -5%;
+  font-weight: bolder;
 }
 
 .login  p {
@@ -31,7 +32,7 @@ section {
   width: 60%;
   margin-left: 35%;
   color: rgb(47, 6, 65);
-  font-size: 1.5rem;
+  font-size: 2rem;
   font-family: "Metal";
 }
 
@@ -41,10 +42,24 @@ section {
   background-color: rgba(255,255,255,0);
   border: none;
   box-shadow: 0px 5px 15px -5px white;
+  font-weight: 1200;
 }
 
 .login input:focus {
-  width: 65%
+  width: 65%;
+  outline: none;
+}
+
+.login .btn {
+  margin-top: 5%;
+  font-size: 2.5rem;
+  color: rgb(199, 12, 115);
+  font-family: "Metal";
+  background-color: rgba(255,255,255,0);
+  border: none;
+  border-radius: 25px;
+  box-shadow: 0px 5px 15px -5px white;
+  font-weight: bolder;
 }
 
 .back {
