--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -18,7 +18,7 @@
       {{ form.as_p }}
       <input type="hidden" name="next" value="{{ next }}">
       <button type="submit" class="btn
-        submit">Login</button>
+        submit">Reflect</button>
     </form>
   </section>
 {% endif %}
