--- a/main_app/static/css/home.css
+++ b/main_app/static/css/home.css
@@ -3,26 +3,28 @@ section {
   width: 60%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
+  margin: 0 auto;
 }
 
 .login {
-  min-height: 100%;
-  width: 100%;
+  min-height: 60%;
+  width: 60%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   z-index: 3;
-  margin-top: 20%;
+  margin-top: 5%;
+  margin-left: -45%;
+  position: absolute;
 }
 
 .login h1 {
   color:rgb(4, 14, 70);
   font-family: "Kaushan Script";
   font-size: 4rem;
-  margin-top: -5%;
   font-weight: bolder;
 }
 
@@ -30,7 +32,7 @@ section {
   display: flex;
   flex-direction: column;
   width: 60%;
-  margin-left: 35%;
+  margin-left: 50%;
   color: rgb(47, 6, 65);
   font-size: 2rem;
   font-family: "Metal";
