--- a/main_app/static/css/signup.css
+++ b/main_app/static/css/signup.css
@@ -10,7 +10,7 @@ section {
 
 .signup-form {
   min-height: 60%;
-  width: 60%;
+  width: 90%;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -24,9 +24,26 @@ section {
 .signup-form h1 {
   color:rgb(4, 14, 70);
   font-family: "Kaushan Script";
-  font-size: 4rem;
+  font-size: 3.5rem;
   font-weight: bolder;
 }
+
+.signup-form table {
+  display: flex;
+  flex-direction: column;
+  width: 60%;
+  margin-left: 50%;
+  color: rgb(47, 6, 65);
+  font-size: 1rem;
+  font-family: "Metal";
+}
+
+th {
+  color: rgb(47, 6, 65);
+  font-size: 1.5rem;
+}
+
+
 
 .clear {
   min-height: 60%;
