--- a/main_app/static/css/signup.css
+++ b/main_app/static/css/signup.css
@@ -43,7 +43,19 @@ th {
   font-size: 1.5rem;
 }
 
+.signup-form input {
+  width: 100px;
+  transition: width 0.8s ease-in-out;
+  background-color: rgba(255,255,255,0);
+  border: none;
+  box-shadow: 0px 5px 15px -5px white;
+  font-weight: 1200;
+}
 
+.signup-form input:focus {
+  width: 65%;
+  outline: none;
+}
 
 .clear {
   min-height: 60%;
