Inputs and Headings aligned to the left of the signup form

--- a/main_app/static/css/signup.css
+++ b/main_app/static/css/signup.css
@@ -41,6 +41,17 @@ section {
 th {
   color: rgb(47, 6, 65);
   font-size: 1.5rem;
+  margin-right: 5%;
+  text-align: start;
+}
+
+tr {
+  display: flex;
+  flex-direction: column;
+}
+
+.helptext {
+  list-style: none;
 }
 
 .signup-form input {
