--- a/main_app/templates/signup.html
+++ b/main_app/templates/signup.html
@@ -22,7 +22,7 @@
     <table>
       {{ form.as_table }}
     </table>
-    <button type="submit" class="btn submit">Submit!</button>
+    <button type="submit" class="btn submit">&nbsp; Submit! &nbsp;</button>
   </form>
 </section>
 
