--- a/main_app/static/css/signup.css
+++ b/main_app/static/css/signup.css
@@ -80,6 +80,23 @@ tr {
   font-weight: bolder;
 }
 
+#id_username {
+  font-family: "Metal";
+  font-size: 1rem;
+  font-weight: bolder;
+  color: rgb(2, 43, 15);
+}
+
+#id_password1 {
+  font-size: 1rem;
+  color: rgb(2, 43, 15);
+}
+
+#id_password2 {
+  font-size: 1rem;
+  color: rgb(2, 43, 15);
+}
+
 .clear {
   min-height: 60%;
   width: 60%;
