--- a/main_app/templates/main_app/memory_form.html
+++ b/main_app/templates/main_app/memory_form.html
@@ -13,13 +13,14 @@
 
 
 
-
-<form action="" method="post" class="form-container">
-  {% csrf_token %}
-  <table>
-    {{ form.as_table }}
-  </table>
-  <button type="submit" class="btn submit">Submit!</button>
-</form>
-
+<section class="create-container">
+  <form action="" method="post" class="create-form" autocomplete="off">
+  <h1>Document Memory</h1>
+    {% csrf_token %}
+    <table>
+      {{ form.as_table }}
+    </table>
+    <button type="submit" class="btn submit">Submit!</button>
+  </form>
+</section>
 {% endblock %}
