inputs on create form aligned

--- a/main_app/templates/main_app/memory_form.html
+++ b/main_app/templates/main_app/memory_form.html
@@ -22,4 +22,8 @@
     <button type="submit" class="btn submit">Submit!</button>
   </form>
 </section>
+
+<section class="clear1">
+  <div class="glass3"></div>
+</section>
 {% endblock %}
