fix calendar formatting issues

--- a/main_app/templates/main_app/memory_form.html
+++ b/main_app/templates/main_app/memory_form.html
@@ -5,6 +5,7 @@
 <link href="https://cdn.jsdelivr.net/npm/mc-datepicker/dist/mc-calendar.min.css" rel="stylesheet"/>
 <script src="https://cdn.jsdelivr.net/npm/mc-datepicker/dist/mc-calendar.min.js"></script>
 <link rel="stylesheet" type="text/css" href="{% static 'css/form.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'css/datepick.css' %}">
 <script defer src="{% static 'js/mem-detail.js' %}"></script>
 {% endblock %}
 
@@ -19,7 +20,7 @@
     <table>
       {{ form.as_table }}
     </table>
-    <button type="submit" class="btn submit">Submit!</button>
+    <button type="submit" class="btn submit">&nbsp;Submit!&nbsp;</button>
   </form>
 </section>
 
