--- a/main_app/static/css/datepick.css
+++ b/main_app/static/css/datepick.css
@@ -1,33 +1,40 @@
 .mc-display__day {
   font-size:clamp(1.6rem, 8vw, 2rem);
+  color: red;
 }
 
 .mc-display__date {
   font-size:clamp(8rem, 40vw, 11.2rem);
+  color: orange;
 }
 
 .mc-display__month {
   font-size: clamp(1.9rem, 9vw, 2.4rem);
+  color: yellow;
 }
 
 .mc-display__year {
   font-size: clamp(3.8rem,18vw,4.8rem);
+  color: green;
 }
 
 .mc-select__data--month, .mc-select__data--month span {
   width: 40vw;
   min-width: 8rem;
   max-width: 10rem;
+  color: blue;
 }
 
 .mc-select__data--year, .mc-select__data--year span {
   width: 22vw;
   min-width: 4.8rem;
   max-width: 5.6rem;
+  color: purple;
 }
 
 .mc-select__data {
   font-size: clamp(1.6rem, 8vw, 2rem);
+  color: lime;
 }
 
 .mc-btn--danger,
@@ -35,12 +42,15 @@
 .mc-date,
 .mc-table__weekday {
   font-size: 1.6rem;
+  color: rgb(77, 144, 203);
 }
 
 .mc-table__weekday {
   padding: .5rem;
+  color:aquamarine;
 }
 
 .mc-picker__footer {
   padding: 1.6rem 0;
+  color: grey;
 }
