--- a/main_app/static/css/form.css
+++ b/main_app/static/css/form.css
@@ -28,7 +28,7 @@ section {
   font-weight: bolder;
   margin-left: 15%;
   margin-bottom: -1%;
-  margin-top: .5%%;
+  margin-top: 2%;
 }
 
 .create-form table {
@@ -48,10 +48,10 @@ th {
   text-align: start;
 }
 
-tr {
+/* tr {
   display: flex;
   flex-direction: column;
-}
+} */
 
 .create-form input {
   width: 100px;
@@ -88,4 +88,16 @@ tr {
   background-size: cover;
   z-index: 2;
   position: absolute;
+}
+
+.create-form button {
+  margin-top: 1%;
+  font-size: 2.5rem;
+  color: rgb(199, 12, 115);
+  font-family: "Metal";
+  background-color: rgba(255,255,255,0);
+  border: none;
+  border-radius: 25px;
+  box-shadow: 0px 5px 15px -5px white;
+  font-weight: bolder;
 }
