Restyle index view cards

--- a/main_app/static/css/memory-index.css
+++ b/main_app/static/css/memory-index.css
@@ -9,7 +9,8 @@
 .card {
   width: 400px;
   height: 300px;
-  border: 5px solid white; 
+  border: 5px solid rgba(255,255,255,0.5); 
+  border-radius: 10px;
   margin: 5px; 
   display: flex;
   align-items: center;
@@ -17,13 +18,38 @@
   background-image: url('https://i.imgur.com/XqRehBY.jpg');
   background-size: cover;
   flex-wrap: wrap;
+  text-align: center;
+  font-family: "Kaushan Script";
+}
+
+.card h1{
+  text-align: center;
+  font-size: 3.5rem;
+  color: rgb(4, 14, 70);
+  margin-bottom: 35px;
 }
 
 .card a {
+  height: 100%;
+  width: 100%;
   text-decoration: none;
-  color: antiquewhite;
-  font-family: "Playball";
+  background-color: rgba(255,255,255,0.4);
 }
+
+.card .when {
+  font-size: 2rem;
+  margin-top: -3%;
+  color: rgb(47, 6, 65);
+  font-weight: bolder;
+}
+
+.card .where {
+  font-size: 1.5rem;
+  color: rgb(199, 12, 115);
+  font-weight: 400;
+}
+
+
 
 
 
