style text area on create view

--- a/main_app/static/css/base.css
+++ b/main_app/static/css/base.css
@@ -44,7 +44,7 @@ nav a {
 nav ul {
   display: flex;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: center;
   flex-wrap: wrap;
 }
 
