--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -28,9 +28,10 @@
         {% if user.is_authenticated %}
           <li><a href="{% url 'about' %}">About</a></li>
           <li><a href="{% url 'memories_index' %}">All Reflections</a></li>
-          <li><img src="https://i.imgur.com/XqRehBY.jpg" alt="" style="width: 75px;"></li>
+          <li><img src="https://i.imgur.com/XqRehBY.jpg" alt="" style="width: 75px;"><h1>Reflections<img src="https://i.imgur.com/XqRehBY.jpg" alt="" style="width: 75px;"></h1></li>
+          {% comment %} <li><img src="https://i.imgur.com/XqRehBY.jpg" alt="" style="width: 75px;"></li>
           <li><h1>Reflections</h1></li>
-          <li><img src="https://i.imgur.com/XqRehBY.jpg" alt="" style="width: 75px;"></li>
+          <li><img src="https://i.imgur.com/XqRehBY.jpg" alt="" style="width: 75px;"></li> {% endcomment %}
           <li><a href="{% url 'memories_create' %}">Capture Moment</a></li>
           <li><a href="{% url 'logout' %}">Log Out</a></li>
         {% else %}
