--- a/main_app/static/css/form.css
+++ b/main_app/static/css/form.css
@@ -28,7 +28,7 @@ section {
   font-weight: bolder;
   margin-left: 15%;
   margin-bottom: -1%;
-  margin-top: 2%;
+  margin-top: -4%;
 }
 
 .create-form table {
@@ -54,7 +54,11 @@ th {
   background-color: rgba(255,255,255,0);
   border: none;
   box-shadow: 0px 5px 15px -5px white;
-  font-weight: 1200;
+  font-family: "Metal";
+  color: rgb(2, 43, 15);
+  font-size: 1rem;
+  font-weight: bolder;
+  margin: 25px;
 }
 
 .create-form input:focus {
@@ -99,11 +103,15 @@ th {
 
 .create-form textarea {
   width: 50%;
+  height: 200px;
   transition: width 0.8s ease-in-out;
   background-color: rgba(255,255,255,0);
   border: none;
   box-shadow: 0px 5px 15px -5px white;
-  font-weight: 1200;
+  font-family: "Metal";
+  color: rgb(2, 43, 15);
+  font-size: 1rem;
+  font-weight: bolder;
 }
 
 .create-form textarea:focus {
