--- a/main_app/static/css/memory-detail.css
+++ b/main_app/static/css/memory-detail.css
@@ -20,3 +20,59 @@
   margin-left: -45%;
   position: absolute;
 }
+
+.memory-card h1 {
+  color:rgb(4, 14, 70);
+  font-family: "Kaushan Script";
+  font-size: 3.5rem;
+  font-weight: bolder;
+  margin-left: 15%;
+  margin-bottom: -1%;
+  margin-top: -4%;
+}
+
+.memory-card h2 {
+  display: flex;
+  flex-direction: column;
+  width: 60%;
+  margin-left: 50%;
+  color: rgb(47, 6, 65);
+  font-size: 2.5rem;
+  font-family: "Metal";
+}
+
+.memory-card .btn {
+  margin-top: 1%;
+  font-size: 2.5rem;
+  color: rgb(199, 12, 115);
+  font-family: "Metal";
+  background-color: rgba(255,255,255,0);
+  border: none;
+  border-radius: 25px;
+  box-shadow: 0px 5px 15px -5px white;
+  font-weight: bolder;
+  text-decoration: none;
+}
+
+.clear2 {
+  min-height: 60%;
+  width: 60%;
+  bottom: 20%;
+  background: url("https://i.imgur.com/XqRehBY.jpg") no-repeat, center;
+  background-size: cover;
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  left: 20%;
+}
+
+.glass4 {
+  min-height: 100%;
+  width: 100%;
+  background: linear-gradient(to top, rgba(255,255,255,0.8), rgba(255,255,255,0.4));
+  background-size: cover;
+  z-index: 2;
+  position: absolute;
+}
