--- a/main_app/static/css/memory-detail.css
+++ b/main_app/static/css/memory-detail.css
@@ -24,11 +24,12 @@
 .memory-card h1 {
   color:rgb(4, 14, 70);
   font-family: "Kaushan Script";
+  text-align: center;
   font-size: 3.5rem;
   font-weight: bolder;
-  margin-left: 15%;
   margin-bottom: -1%;
   margin-top: -4%;
+  margin-left: 50%;
 }
 
 .memory-card h2 {
@@ -39,6 +40,11 @@
   color: rgb(47, 6, 65);
   font-size: 2.5rem;
   font-family: "Metal";
+}
+
+.memory-card .description {
+  font-size: 1.5rem;
+  margin-bottom: 10px;
 }
 
 .memory-card .btn {
