--- a/main_app/static/css/form.css
+++ b/main_app/static/css/form.css
@@ -26,8 +26,8 @@ section {
   font-family: "Kaushan Script";
   font-size: 3.5rem;
   font-weight: bolder;
-  margin-left: 15%;
-  margin-bottom: -1%;
+  margin-left: 50%;
+  margin-bottom: 3%;
   margin-top: -4%;
 }
 
@@ -58,7 +58,7 @@ th {
   color: rgb(2, 43, 15);
   font-size: 1rem;
   font-weight: bolder;
-  margin: 25px;
+  margin-bottom: 50px;
 }
 
 .create-form input:focus {
@@ -90,7 +90,7 @@ th {
 }
 
 .create-form button {
-  margin-top: 1%;
+  margin-top: 10%;
   font-size: 2.5rem;
   color: rgb(199, 12, 115);
   font-family: "Metal";
@@ -99,6 +99,7 @@ th {
   border-radius: 25px;
   box-shadow: 0px 5px 15px -5px white;
   font-weight: bolder;
+  margin-left: 50%;
 }
 
 .create-form textarea {
