--- a/main_app/static/css/about.css
+++ b/main_app/static/css/about.css
@@ -1,19 +1,19 @@
 .primary {
-  width: 100%;
-  height: 100vh;
+  width: 60vw;
+  height: 60vh;
 }
 
 .intro {
-  min-height: 100vh;
+  height: 60vh;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
 .intro section {
-  min-height: 60%;
-  width: 30%;
-  bottom: 20%;
+  height: 60vh;
+  width: 30vw;
+  /* bottom: 20%; */
   background: url("https://media.istockphoto.com/photos/water-texture-picture-id146894620?b=1&k=20&m=146894620&s=170667a&w=0&h=deKuJEmmYsrDC7Z5bIxgQ1LkWDXSQdmj7q_60m_9OUI=") no-repeat, center;
   background-size: cover;
   position: absolute;
@@ -24,9 +24,9 @@
 }
 
 .glass {
-  min-height: 60%;
-  width: 30%;
-  bottom: 20%;
+  height: 60vh;
+  width: 30vw;
+  /* bottom: 20%; */
   background: linear-gradient(to top, rgba(255,255,255,0.9), rgba(255,255,255,0.5));
   background-size: cover;
   z-index: 2;
@@ -34,7 +34,7 @@
 }
 
 .description {
-  min-height: 60%;
+  height: 60vh;
   width: 95%;
   line-height: 2rem;
   z-index: 3;
@@ -64,5 +64,5 @@
 .logo-header {
   margin-top: 100%;
   height: 40%;
-  margin-bottom: 10%;
+  max-width: 95vw;
 }
