--- a/main_app/static/css/base.css
+++ b/main_app/static/css/base.css
@@ -23,6 +23,7 @@ body {
 
 h1 {
   color: beige;
+  display: inline-block;
 }
 
 header {
@@ -58,4 +59,8 @@ nav li {
 
 .account{
   align-self: flex-end;
+}
+
+main {
+  margin-bottom: 5vh;
 }
