--- a/main_app/static/css/form.css
+++ b/main_app/static/css/form.css
@@ -22,13 +22,14 @@ section {
 }
 
 .create-form h1 {
+  width: 65%;
   color:rgb(4, 14, 70);
   font-family: "Kaushan Script";
   font-size: 3.5rem;
   font-weight: bolder;
-  margin-left: 50%;
+  margin-left: 70%;
   margin-bottom: 3%;
-  margin-top: -4%;
+  margin-top: -1%;
 }
 
 .create-form table {
@@ -44,12 +45,12 @@ section {
 th {
   color: rgb(47, 6, 65);
   font-size: 1.5rem;
-  margin-right: 5%;
-  text-align: start;
+  text-align: center;
+  margin-left: 50%;
 }
 
 .create-form input {
-  width: 100px;
+  width: 50%;
   transition: width 0.8s ease-in-out;
   background-color: rgba(255,255,255,0);
   border: none;
@@ -59,10 +60,12 @@ th {
   font-size: 1rem;
   font-weight: bolder;
   margin-bottom: 50px;
+  margin-right: 50%;
+  position: absolute;
 }
 
 .create-form input:focus {
-  width: 65%;
+  width: 100%;
   outline: none;
 }
 
@@ -90,6 +93,7 @@ th {
 }
 
 .create-form button {
+  width: 15%;
   margin-top: 10%;
   font-size: 2.5rem;
   color: rgb(199, 12, 115);
