--- a/main_app/static/css/about.css
+++ b/main_app/static/css/about.css
@@ -1,18 +1,22 @@
 .primary {
   width: 60vw;
   height: 60vh;
-}
-
-.intro {
-  height: 60vh;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
+.intro {
+  height: 60vh;
+  position: absolute;
+  /* display: flex;
+  align-items: center;
+  justify-content: center; */
+}
+
 .intro section {
   height: 60vh;
-  width: 30vw;
+  width: 40vw;
   /* bottom: 20%; */
   background: url("https://media.istockphoto.com/photos/water-texture-picture-id146894620?b=1&k=20&m=146894620&s=170667a&w=0&h=deKuJEmmYsrDC7Z5bIxgQ1LkWDXSQdmj7q_60m_9OUI=") no-repeat, center;
   background-size: cover;
@@ -25,7 +29,7 @@
 
 .glass {
   height: 60vh;
-  width: 30vw;
+  width: 40vw;
   /* bottom: 20%; */
   background: linear-gradient(to top, rgba(255,255,255,0.9), rgba(255,255,255,0.5));
   background-size: cover;
@@ -53,16 +57,7 @@
   font-size: 1.5rem;
   line-height: 2.5rem;
   font-weight: bold;
-  margin-bottom: 70%;
 }
 
-.still img {
-  z-index: 3;
-  margin-bottom: 2%;
-}
 
-.logo-header {
-  margin-top: 100%;
-  height: 40%;
-  max-width: 95vw;
-}
+
