--- a/main_app/static/css/base.css
+++ b/main_app/static/css/base.css
@@ -24,6 +24,7 @@ body {
 h1 {
   color: beige;
   display: inline-block;
+  margin-left: 0%;
 }
 
 header {
@@ -34,7 +35,7 @@ margin-bottom: 7vh;
 
 nav {
   font-family: 'Cinzel Decorative';
-  font-size: 22px;
+  font-size: 1.5vw;
   font-weight: 1500;
 }
 
@@ -46,7 +47,7 @@ nav a {
 nav ul {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-around;
   flex-wrap: wrap;
 }
 
@@ -56,10 +57,8 @@ nav li {
 
 .nav-title {
   display: inline;
-}
-
-.account{
-  align-self: flex-end;
+  margin-right: 15vw;
+  margin-left: 20vw;
 }
 
 main {
