--- a/main_app/static/css/memory-detail.css
+++ b/main_app/static/css/memory-detail.css
@@ -1,6 +1,6 @@
 .memory-detail {
-  min-height: 60%;
-  width: 60%;
+  height: 60vh;
+  width: 60vw;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -9,8 +9,8 @@
 }
 
 .memory-card {
-  min-height: 60%;
-  width: 90%;
+  height: 60vh;
+  width: 90vw;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -25,7 +25,7 @@
   color:rgb(4, 14, 70);
   font-family: "Kaushan Script";
   text-align: center;
-  font-size: 3.5rem;
+  font-size: 6vw;
   font-weight: bolder;
   margin-bottom: -1%;
   margin-top: -4%;
@@ -35,20 +35,22 @@
 .memory-card h2 {
   display: flex;
   flex-direction: column;
-  width: 60%;
-  margin-left: 50%;
+  width: 60vw;
+  margin-left: 50vw;
   color: rgb(47, 6, 65);
-  font-size: 2.5rem;
+  font-size: 3vw;
   font-family: "Metal";
 }
 
 .memory-card .description {
-  font-size: 1.5rem;
+  font-size: 1.5vw;
   margin-bottom: 10px;
 }
 
 .memory-card .btn {
-  margin-top: 1%;
+  margin-top: 1vw;
+  margin-left: 90vw;
+  margin-top: 35vw;
   font-size: 2.5rem;
   color: rgb(199, 12, 115);
   font-family: "Metal";
@@ -58,6 +60,7 @@
   box-shadow: 0px 5px 15px -5px white;
   font-weight: bolder;
   text-decoration: none;
+  position: absolute;
 }
 
 .clear2 {
