--- a/main_app/templates/memories/index.html
+++ b/main_app/templates/memories/index.html
@@ -6,6 +6,7 @@
 
 {% block content %}
 
+<h1 class="collection">Your Memories:</h1>
 <section class="card-container">
   {% for memory in memories %}
     <div class="card">
